Final before fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,16 @@
-.App {
-  text-align: center;
-}
-
 body {
   background: #141414;
-  color: #ffffff
+  color: #ffffff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.movie-app>.row {
+  overflow-x: auto;
+  flex-wrap: nowrap;
 }
 
 .image-container {
   position: relative;
   transition: transform 0.2s;
-
 }
 
 .image-container:hover {
@@ -61,7 +25,7 @@ body {
 .overlay {
   position: absolute;
   background: rgba(0, 0, 0, 0.8);
-  width: 79%;
+  width: 50%;
   transition: 0.5s ease;
   opacity: 0;
   bottom: 0;
